Fix cta text alignment

--- a/packages/pricing-tiers/style.module.css
+++ b/packages/pricing-tiers/style.module.css
@@ -130,6 +130,8 @@
 
 .cta {
   min-height: 48px;
+  display: grid;
+  place-items: center;
 
   &.textLinkCta {
     display: flex;
